Fix image grid spacing

--- a/webapps/dallf/static/dallf/base.css
+++ b/webapps/dallf/static/dallf/base.css
@@ -71,15 +71,6 @@ body {
     padding-right: 0;
 }
 
-
-#id_recent_gallery {
-    padding-top: 10px;
-    padding-bottom: 0;
-    padding-left: 0;
-    padding-right: 0;
-}
-
-
 .gallery-page {
     padding-left: 10px;
     padding-right: 10px;
